@@ -34,60 +34,6 @@ extern G4GEOM_DLL G4ThreadLocal
 G4Allocator<G4NavigationLevel> *aNavigationLevelAllocator;
 
 inline
-G4NavigationLevel::G4NavigationLevel( G4VPhysicalVolume* pPhysVol,
-                                const G4AffineTransform& afTransform,
-                                      EVolume            volTp,
-                                      G4int              repNo )
-{
-  fLevelRep = new G4NavigationLevelRep( pPhysVol, afTransform, volTp, repNo );
-}
-
-inline
-G4NavigationLevel::G4NavigationLevel( G4VPhysicalVolume* pPhysVol,
-                                const G4AffineTransform& levelAbove,
-                                const G4AffineTransform& relativeCurrent,
-                                      EVolume            volTp,
-                                      G4int              repNo )
-{
-  fLevelRep = new G4NavigationLevelRep( pPhysVol, 
-                                        levelAbove, 
-                                        relativeCurrent, 
-                                        volTp, 
-                                        repNo );
-}
-
-inline
-G4NavigationLevel::G4NavigationLevel()
-{
-  fLevelRep = new G4NavigationLevelRep();
-}
-
-inline
-G4NavigationLevel::G4NavigationLevel(const G4NavigationLevel& right)
-  : fLevelRep( right.fLevelRep )
-{
-  fLevelRep->AddAReference(); 
-}
-
-inline
-G4NavigationLevel::~G4NavigationLevel()
-{
-  if( fLevelRep->RemoveAReference() )  { delete fLevelRep; }
-}
-
-inline
-G4NavigationLevel& G4NavigationLevel::operator=(const G4NavigationLevel &right)
-{
-  if ( &right != this )
-  {
-    right.fLevelRep->AddAReference(); 
-    if( fLevelRep->RemoveAReference() )  { delete fLevelRep; }
-    fLevelRep = right.fLevelRep;
-  }
-  return *this;
-} 
-
-inline
 G4VPhysicalVolume* G4NavigationLevel::GetPhysicalVolume() const 
 {
   return fLevelRep->GetPhysicalVolume(); 
