@@ -33,3 +33,51 @@
 #include "G4NavigationLevel.hh"
 
 G4ThreadLocal G4Allocator<G4NavigationLevel> *aNavigationLevelAllocator = 0;
+
+G4NavigationLevel::G4NavigationLevel( G4VPhysicalVolume* pPhysVol,
+                                const G4AffineTransform& afTransform,
+                                      EVolume            volTp,
+                                      G4int              repNo )
+{
+  fLevelRep = new G4NavigationLevelRep( pPhysVol, afTransform, volTp, repNo );
+}
+
+G4NavigationLevel::G4NavigationLevel( G4VPhysicalVolume* pPhysVol,
+                                const G4AffineTransform& levelAbove,
+                                const G4AffineTransform& relativeCurrent,
+                                      EVolume            volTp,
+                                      G4int              repNo )
+{
+  fLevelRep = new G4NavigationLevelRep( pPhysVol, 
+                                        levelAbove, 
+                                        relativeCurrent, 
+                                        volTp, 
+                                        repNo );
+}
+
+G4NavigationLevel::G4NavigationLevel()
+{
+  fLevelRep = new G4NavigationLevelRep();
+}
+
+G4NavigationLevel::G4NavigationLevel(const G4NavigationLevel& right)
+  : fLevelRep( right.fLevelRep )
+{
+  fLevelRep->AddAReference(); 
+}
+
+G4NavigationLevel::~G4NavigationLevel()
+{
+  if( fLevelRep->RemoveAReference() )  { delete fLevelRep; }
+}
+
+G4NavigationLevel& G4NavigationLevel::operator=(const G4NavigationLevel &right)
+{
+  if ( &right != this )
+  {
+    right.fLevelRep->AddAReference(); 
+    if( fLevelRep->RemoveAReference() )  { delete fLevelRep; }
+    fLevelRep = right.fLevelRep;
+  }
+  return *this;
+} 
